Header on mobile display rationg.Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,7 @@ Responsive*/
         width: 250px;
         padding: 24px;
         padding-bottom: 40px;
+        z-index: 1;
         
     }
     .header-active {
